tests/en/errors/link_missing.salam
// EXPECT: E057
link "./this_archive_does_not_exist.a"
func main:
    println("unreachable")
end
